# updater

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml
docs/: architecture.md  development.md  logging.md  monorepo-mode.md  roadmap.md  version-bumping.md
src/updater/: changelog.py  claude_analyzer.py  cli.py  config.py  docker_updater.py  git_operations.py  go_updater.py  gomod_excludes.py  log_manager.py  module_discovery.py  pipeline.py  python_updater.py  python_version_updater.py  sound.py  version_updater.py
tests/: __init__.py  conftest.py  test_changelog.py  test_claude_analyzer.py  test_cli.py  test_docker_updater.py  test_ensure_changelog_tag.py  test_git_operations.py  test_gitignore.py  test_go_updater.py  test_gomod_excludes.py  test_module_discovery.py  test_pipeline.py  test_python_module_discovery.py  test_python_updater.py  test_python_version_updater.py  test_sound.py  test_utils.py  test_version_updater.py
updater/: __init__.py  __main__.py  changelog.py  claude_analyzer.py  cli.py  config.py  exceptions.py  file_utils.py  git_operations.py  go_updater.py  gomod_excludes.py  log_manager.py  prompts.py  sound.py  version_updater.py
