[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dependency-updater"
version = "0.1.0"
description = "Multi-language dependency updater with Claude-powered CHANGELOG and commit messages (Go, Python, Node, etc.)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "BSD-2-Clause" }
dependencies = [
    "claude-code-sdk>=0.0.25",
    "httpx>=0.28.1",
    "pyyaml>=6.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.8.0",
    "mypy>=1.0.0",
    "types-pyyaml>=6.0.0",
]

[project.scripts]
update-deps = "updater.cli:main"
update-all = "updater.cli:main"
update-go = "updater.cli:main_go"
update-python = "updater.cli:main_python"
update-docker = "updater.cli:main_docker"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/updater"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.mypy]
python_version = "3.12"
disallow_untyped_defs = true
warn_return_any = false
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = true
